[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.5 patchlevel 1                                 ??? ??, 2012

Fixes:
 * When regexp matching an ansi'd string, named captures weren't set at all.
   For non-ansi'd strings, non-named (numeric) captures were sometimes 
   overwritten with the values of named captures. Reported by Sketch. [MG]
 * The configure script incorrectly reported that ssl_slave was unavailable
   when told to disable it via --disable-ssl_slave. Reported by Cheetah. [MG]
 * Sound from an AUDIBLE wagon object used to propagate into other wagon
   objects in the same location with an @listen of *. It now does so again.
   Reported by Xeero and Padraic. [MG]
 * Loading a reboot db is more robust. Inspired by Padraic. [SW]
 * scan() couldn't be used by rooms. Reported by Padraic. [MG]
 * Possible crashbug in the queue triggered by events reported by
   Rince@Wing Commander: New Horizon. [MG]

Commands:
 * @edit/regexp[/all][/nocase], command version of regedit[all][i]().
   Suggested by Minion. [MG]

Minor changes:
 * Logged messages now have events in the LOG tree. Suggested by
   Padraic. [SW]
 * Objects belonging to destroyed players now get chowned to a
   configurable player (probate_judge in mush.cnf) instead of
   God. [SW]
 * regmatch() now returns an error for invalid regexps, whether you're
   storing subpattern matches or not. Reported by Sketch. [MG]
 * Commands involving movement now check the enactor is a player/thing,
   instead of just relying on the command's restriction. [MG]
 * @switch, switch(), @[in]filter and attribute @locks (foo:bar) now do
   lte/gte wildcard matches on <=foo and >=foo patterns. Inspired by 
   Wiggles. [MG]